# platform_description

./: CMakeLists.txt  package.xml
cmake/: Config.cmake.in
module/: alias.in.yaml  module.yaml
mujoco/: platform.xml  platform.yaml
urdf/: platform.urdf
